bugfix: got rid of mat-list for ingredients and instructions. Mat-Lists are really not made for wrapping and resulted in truncated contents too often on lower resolutions

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 16px;
-  padding: 16px;
+  gap: 1rem;
+  padding: 1rem;
   max-width: 70%;
   margin: 0 auto;
 }
