--- a/src/app/recipe/instructions/instructions.scss
+++ b/src/app/recipe/instructions/instructions.scss
@@ -1,10 +1,16 @@
 .instructions-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
+  padding: 0;
+  margin: 0;
+
+  // border: 2px solid green;
 }
 
 .instructions-list .instruction {
-  height: auto; // Removes default Material height
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+
+  // border: 2px solid red;
 }
